tutorials/terraform/eks/config/ingress_test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx        # or omit if nginx is the defaultClass
  rules:
    - host: webapp.internal
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: webapp-svc
                port:
                  number: 80
